plugins {
    id 'java'
    id 'application'
    id "com.github.johnrengelman.shadow" version "8.1.1"
}

group = 'com.example'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'net.dv8tion', name: 'JDA', version: '5.2.1'
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.36'
    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
}

test {
    useJUnitPlatform()
}

application {
    mainClass = 'Main'
}

shadow {

}

//tasks.register('fatJar', Jar) {
//    manifest {
//        attributes 'Main-Class': application.mainClass
//    }
//    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
//    with jar
//}